--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="zoning-map">
-                            <img src="/mnt/user-data/uploads/Screenshot_2025-12-08_110416.png" alt="Charleston Upper King Street and French Quarter Zoning Map showing Limited Business zones">
+                            <img src="limited-business-king.png" alt="Charleston Upper King Street and French Quarter Zoning Map showing Limited Business zones">
                             <div class="zoning-map-caption">
                                 <strong>Upper King Street & French Quarter Zoning</strong><br>
                                 Pink/Light areas: Limited Business (LB) - Adult entertainment PROHIBITED<br>
@@ -399,7 +399,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="zoning-map">
-                            <img src="/mnt/user-data/uploads/Screenshot_2025-12-08_111059.png" alt="Charleston East Bay and King Street corridor zoning showing commercial tourist and limited business zones">
+                            <img src="limited-business-east-bay.png" alt="Charleston East Bay and King Street corridor zoning showing commercial tourist and limited business zones">
                             <div class="zoning-map-caption">
                                 <strong>East Bay Street & King Street Corridor</strong><br>
                                 Yellow: Commercial Tourist/General Business - Adult entertainment PROHIBITED<br>
@@ -412,7 +412,7 @@
                 <div class="row mt-4">
                     <div class="col-md-6">
                         <div class="zoning-map">
-                            <img src="/mnt/user-data/uploads/Screenshot_2025-12-08_111720.png" alt="Charleston downtown peninsula zoning detail showing prohibited areas for adult entertainment">
+                            <img src="light-industrial.png" alt="Charleston downtown peninsula zoning detail showing prohibited areas for adult entertainment">
                             <div class="zoning-map-caption">
                                 <strong>Downtown Charleston Peninsula Detail</strong><br>
                                 Light colored areas: Tourism/Commercial zones where adult entertainment is PROHIBITED<br>
@@ -422,7 +422,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="zoning-map">
-                            <img src="/mnt/user-data/uploads/Screenshot_2025-12-08_113722.png" alt="Charleston County Use Table showing Sexually Oriented Business zoning designation">
+                            <img src="zoning-table.png" alt="Charleston County Use Table showing Sexually Oriented Business zoning designation">
                             <div class="zoning-map-caption">
                                 <strong>Official Use Table - Sexually Oriented Business</strong><br>
                                 Charleston County Table 6.1.1 showing "C" (Conditional) marking ONLY in Light Industrial (LI) district<br>
