--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
             <hr class="my-4" style="border-color: rgba(255,255,255,0.2);">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0"><small>&copy; 2024 Charleston Adult Entertainment Legal Resource. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></small></p>
+                    <p class="mb-0"><small>&copy; 2024 Charleston Adult Entertainment Legal Resource. All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-use.html">Terms of Use</a></small></p>
                 </div>
             </div>
         </div>
